--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -9,7 +9,8 @@
     "pages/home/share/share",
     "pages/home/community/community",
     "pages/home/category/add/form_add_category",
-    "pages/list/list"
+    "pages/list/list",
+    "pages/play/play"
   ],
   "window": {
     "navigationBarBackgroundColor": "#39b54a",
