--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.7.0",
-	"appid": "wxa1a2fd32cc9673b7",
+	"appid": "wx7e1b1178f0bfab87",
 	"projectname": "%E5%B0%8F%E7%A8%8B%E5%BA%8F%E7%A4%BA%E4%BE%8B",
 	"isGameTourist": false,
 	"simulatorType": "wechat",
