--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/home/category/add/form_add_category",
     "pages/list/list",
-    "pages/play/play"
+    "pages/play/play",
+    "pages/publish/single/single"
   ],
   "window": {
     "navigationBarBackgroundColor": "#39b54a",
